force-app/main/default/objects/Host_Group__c/Host_Group__c.object-meta.xml
<CustomObject>
    <label>Host Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Host Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Host Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>