force-app/main/default/objects/Host_Group__c/fields/ContactLookup__c.field-meta.xml
<CustomField>
    <fullName>ContactLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactLookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Host Groups</relationshipLabel>
    <relationshipName>Host_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>