force-app/main/default/objects/Host_Group__c/fields/Host_Group__c.field-meta.xml
<CustomField>
    <fullName>Host_Group__c</fullName>
    <label>Host Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PGS SYD</fullName>
            </value>
            <value>
                <fullName>PGS GOL</fullName>
            </value>
            <value>
                <fullName>PGS BNE</fullName>
            </value>
            <value>
                <fullName>Interstate (Corporate)</fullName>
            </value>
            <value>
                <fullName>International (Corporate)</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
                <isActive>false</isActive>
                <label>Domestic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>